--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="build/index.css" />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <header>
       <div class="container row">
         <button class="nav-toggle" aria-label="open navigation">
@@ -33,13 +37,40 @@
       </div>
     </header>
     <section id="welcome" class="container">
-      <h1>Yampier Medina</h1>
+      <h1 class="text-4xl font-bold text-center text-blue-500">
+        Yampier Medina
+      </h1>
       <h2>Computer Science Engineer (BS)</h2>
       <h3>Live learner, nature lover and web coder converted</h3>
       <p>
         Turned JS Developer. Know SWE, testing, SQA and PM. Like AWS serverless
         computing, React, GraphQL and ES Next
       </p>
+    </section>
+
+    <section id="projects">
+      <div class="px-8 py-12">
+        <h2 class="mt-0 text-2xl font-bold text-gray-800 leading-tight">
+          Money Tracker
+        </h2>
+        <img
+          class="mt-4 rounded-lg shadow-xl"
+          src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+          alt="personal desktop"
+        />
+        <p class="mt-6 text-gray-600">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
+          laborum id in nesciunt nostrum temporibus, culpa nulla explicabo
+          autem.
+        </p>
+        <div class="mt-4">
+          <a
+            class="inline-block shadow-lg bg-gray-600 text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold"
+            href="#"
+            >Check App Demo</a
+          >
+        </div>
+      </div>
     </section>
   </body>
 </html>
