Responsive design sm-md

--- a/index.html
+++ b/index.html
@@ -49,23 +49,25 @@
     </section>
 
     <section id="projects">
-      <div class="px-8 py-12">
-        <h2 class="mt-0 text-2xl font-bold text-gray-800 leading-tight">
+      <div class="px-8 py-12 max-w-md mx-auto sm:max-w-xl">
+        <h2
+          class="mt-0 text-2xl font-bold text-gray-800 leading-tight sm:text-4xl"
+        >
           Money Tracker
         </h2>
         <img
-          class="mt-4 rounded-lg shadow-xl"
+          class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
           src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
           alt="personal desktop"
         />
-        <p class="mt-6 text-gray-600">
+        <p class="mt-6 text-gray-600 sm:mt-8 sm:text-xl">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
           laborum id in nesciunt nostrum temporibus, culpa nulla explicabo
           autem.
         </p>
-        <div class="mt-4">
+        <div class="mt-4 sm:mt-6">
           <a
-            class="inline-block shadow-lg bg-gray-600 text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold"
+            class="inline-block shadow-lg bg-gray-600 text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold sm:text-base"
             href="#"
             >Check App Demo</a
           >
