--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-300">
     <header>
       <div class="container row">
         <button class="nav-toggle" aria-label="open navigation">
@@ -49,28 +49,45 @@
     </section>
 
     <section id="projects">
-      <div class="px-8 py-12 max-w-md mx-auto sm:max-w-xl">
-        <h2
-          class="mt-0 text-2xl font-bold text-gray-800 leading-tight sm:text-4xl"
+      <div class="flex bg-gray-100">
+        <div
+          class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 lg:py-24 lg:px-12"
         >
-          Money Tracker
-        </h2>
-        <img
-          class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
-          src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
-          alt="personal desktop"
-        />
-        <p class="mt-6 text-gray-600 sm:mt-8 sm:text-xl">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
-          laborum id in nesciunt nostrum temporibus, culpa nulla explicabo
-          autem.
-        </p>
-        <div class="mt-4 sm:mt-6">
-          <a
-            class="inline-block shadow-lg bg-gray-600 text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold sm:text-base"
-            href="#"
-            >Check App Demo</a
-          >
+          <div class="xl:max-w-lg xl:m-auto">
+            <h2
+              class="mt-0 text-2xl font-bold text-gray-800 leading-tight sm:text-4xl lg:text-3xl xl:text-4xl"
+            >
+              Money Tracker.
+              <br class="hidden md:inline" />
+              <span class="text-indigo-500"
+                >Built with Amplify, React, GraphQL, Semantic UI</span
+              >
+            </h2>
+            <img
+              class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+              src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+              alt="personal desktop"
+            />
+            <p class="mt-6 text-gray-600 sm:mt-8 sm:text-xl">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+              ipsam laborum id in nesciunt nostrum temporibus, culpa nulla
+              explicabo autem.
+            </p>
+            <div class="mt-4 sm:mt-6">
+              <a
+                class="inline-block shadow-lg bg-indigo-500 hover:bg-indigo-400 md:hover:bg-green-400 active:bg-indigo-600 focus:outline-none focus:shadow-outline text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold sm:text-base"
+                href="#"
+                >Check App Demo</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="hidden lg:block lg:w-1/2 lg:relative">
+          <img
+            class="absolute inset-0 h-full w-full object-cover object-center"
+            src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+            alt="personal desktop"
+          />
         </div>
       </div>
     </section>
