Composing utilities and using @screen media query

--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@
               explicabo autem.
             </p>
             <div class="mt-4 sm:mt-6">
-              <a
-                class="inline-block shadow-lg bg-indigo-500 hover:bg-indigo-400 md:hover:bg-green-400 active:bg-indigo-600 focus:outline-none focus:shadow-outline text-white rounded-lg px-5 py-3 uppercase tracking-wider text-sm font-semibold sm:text-base"
-                href="#"
-                >Check App Demo</a
-              >
+              <a class="btn" href="#">Check App Demo</a>
             </div>
           </div>
         </div>
