Retouch the btns for xsm devices

--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
               explicabo autem.
             </p>
             <div class="mt-4 sm:mt-6">
-              <a class="btn" href="#">Check App Demo</a>
+              <a class="btn btn-indigo shadow-lg sm:text-base" href="#"
+                >Check Demo</a
+              >
+              <a class="btn btn-gray shadow-lg sm:text-base" href="#"
+                >Learn more</a
+              >
             </div>
           </div>
         </div>
