--- a/index.html
+++ b/index.html
@@ -15,26 +15,67 @@
     ></script>
   </head>
   <body class="bg-gray-300">
-    <header>
-      <div class="container row">
-        <button class="nav-toggle" aria-label="open navigation">
-          <span class="hamburger"></span>
-        </button>
-        <a href="#"
-          ><img
+    <header class="bg-gray-900 text-gray-500">
+      <div class="flex items-center justify-between px-4 py-3">
+        <div>
+          <img
+            class="h-8"
             src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/308367/logo.svg"
             alt="logo"
-        /></a>
-        <nav class="nav">
-          <ul class="nav__list nav__list--primary">
-            <li class="nav-item"><a href="#welcome">About</a></li>
-            <li class="nav-item"><a href="#skills">Skills</a></li>
-            <li class="nav-item"><a href="#projects">Projects</a></li>
-            <li class="nav-item"><a href="#learning">Learning</a></li>
-            <li class="nav-item"><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+          />
+        </div>
+
+        <div>
+          <button
+            class="block text-gray-500 hover:text-white focus:text-white focus:outline-none nav-toggle"
+            aria-label="open navigation"
+          >
+            <svg
+              id="close"
+              class="h-6 w-6 fill-current svg-close"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z"
+              />
+            </svg>
+            <svg
+              id="open"
+              class="h-6 w-6 fill-current svg-open"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
+
+      <nav class="px-2 pt-2 pb-3 nav is-closed">
+        <a
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          href="#about"
+          >About</a
+        >
+        <a
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          href="#projects"
+          >Projects</a
+        >
+        <a
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          href="#education"
+          >Education</a
+        >
+        <a
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          href="#contact"
+          >Contact</a
+        >
+      </nav>
     </header>
     <section id="welcome" class="container">
       <h1 class="text-4xl font-bold text-center text-blue-500">
@@ -92,5 +133,30 @@
         </div>
       </div>
     </section>
+
+    <script>
+      const navToggle = document.querySelector(".nav-toggle");
+      const nav = document.querySelector(".nav");
+      const svgClose = document.querySelector("#close");
+      const svgOpen = document.querySelector("#open");
+
+      navToggle.addEventListener("click", () => {
+        nav.classList.toggle("nav--visible");
+
+        if (nav.classList.contains("is-closed")) {
+          nav.classList.remove("is-closed");
+          svgClose.classList.remove("svg-close");
+          svgClose.classList.add("svg-open");
+          svgOpen.classList.remove("svg-open");
+          svgOpen.classList.add("svg-close");
+        } else {
+          nav.classList.add("is-closed");
+          svgClose.classList.remove("svg-open");
+          svgClose.classList.add("svg-close");
+          svgOpen.classList.remove("svg-close");
+          svgOpen.classList.add("svg-open");
+        }
+      });
+    </script>
   </body>
 </html>
