--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     ></script>
   </head>
   <body class="bg-gray-300">
-    <header class="bg-gray-900 text-gray-500">
-      <div class="flex items-center justify-between px-4 py-3">
+    <header
+      class="bg-gray-900 text-gray-500 sm:flex sm:justify-between sm:items-center sm:px-4 sm:py-3"
+    >
+      <div class="flex items-center justify-between px-4 py-3 sm:p-0">
         <div>
           <img
             class="h-8"
@@ -25,7 +27,7 @@
           />
         </div>
 
-        <div>
+        <div class="sm:hidden">
           <button
             class="block text-gray-500 hover:text-white focus:text-white focus:outline-none nav-toggle"
             aria-label="open navigation"
@@ -54,24 +56,24 @@
         </div>
       </div>
 
-      <nav class="px-2 pt-2 pb-3 nav is-closed">
+      <nav class="px-2 pt-2 pb-3 nav is-closed sm:flex">
         <a
-          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800 sm:mt-0 sm:ml-2"
           href="#about"
           >About</a
         >
         <a
-          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800 sm:mt-0 sm:ml-2"
           href="#projects"
           >Projects</a
         >
         <a
-          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800 sm:mt-0 sm:ml-2"
           href="#education"
           >Education</a
         >
         <a
-          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800"
+          class="block mt-1 px-2 py-1 font-semibold rounded hover:bg-gray-800 sm:mt-0 sm:ml-2"
           href="#contact"
           >Contact</a
         >
