Update welcome section

--- a/index.html
+++ b/index.html
@@ -94,18 +94,67 @@
         </nav>
       </header>
 
-      <section id="welcome" class="container h-screen">
-        <h1 class="font-bold text-left text-blue-500">
-          Computer Science Engineer (BS)
-        </h1>
-        <h3>Live learner, nature lover and web coder converted</h3>
-        <p>
-          Turned JS Developer. Know SWE, testing, SQA and PM. Like AWS
-          serverless computing, React, GraphQL and ES Next
-        </p>
+      <section id="welcome" class="">
+        <div class="flex">
+          <div class="flex flex-col mt-5 sm:mt-7 mx-3 sm:ml-20 sm:mr-2">
+            <h1 class="mb-2 sm:text-xl">
+              Hi, I'm a
+              <span class="font-semibold"
+                >Computer Science Engineer (2009)</span
+              >
+              turned to the <span class="font-semibold">JS universe</span>.
+            </h1>
+            <p class="mb-2 sm:text-lg">
+              I like AWS serverless computing, React, GraphQL and ES Next.
+            </p>
+            <p class="mb-2 sm:text-lg">
+              I Know SWE, testing, SQA and PM (Lead teams of 20-50 people).
+            </p>
+
+            <p class="mb-2 sm:text-lg">
+              I care about UX/UI, SEO and performance but I have a lot grasp.
+              Currently learning from Refactoring UI book and Tailwind CSS. I
+              have also played with Bootstrap and Semantic UI.
+            </p>
+
+            <p class="mb-2 sm:text-lg">
+              I use VS Code, Git/Github, Chrome Developer Tools and Amplify CLI
+              daily.
+            </p>
+
+            <p class="mb-2 sm:text-lg">
+              I speak English (continuosly improving) and Spanish (native).
+            </p>
+
+            <p class="mb-2 sm:text-lg">
+              I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS) pluged
+              to an external Dell UltraSharp 27 4K Monitor.
+            </p>
+
+            <p class="mb-2 sm:text-lg">
+              I have 9 lovely Bettas and a pasion for nature.
+            </p>
+
+            <p class="mb-8 sm:text-lg">
+              Reads:
+              <span class="font-medium">The choice by Edith Eva Eger</span>
+              [non-technical, completed],
+              <span class="font-medium"
+                >Composing Software by Eric Elliot.</span
+              >
+              [technical, completed],
+              <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
+              [non-technical, in progress] and
+              <span class="font-medium"
+                >The Stratup Owbers's Manual by Steve Blank & Bob Dorf</span
+              >
+              [technical, pending].
+            </p>
+          </div>
+        
       </section>
 
-      <section id="projects">
+      <section id="projects mt-8">
         <div class="flex bg-gray-100">
           <div
             class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 lg:py-24 lg:px-12"
@@ -154,7 +203,7 @@
           class="social items-center justify-center content-center flex flex-col h-20 text-xl"
         >
           <div
-            class="social-list sm:fixed sm:top-0 sm:left-0 sm:mt-20 sm:ml-20 lg:ml-24 sm:pt-10 flex sm:flex-col text-xl"
+            class="social-list sm:fixed sm:top-0 sm:left-0 sm:mt-24 sm:ml-20 lg:ml-24 sm:pt-10 flex sm:flex-col text-xl"
           >
             <a
               class="block mt-1 px-1 rounded-full hover:bg-gray-200"
