Fixed aligment problems with the social list

--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
   </head>
   <body class="bg-gray-400">
     <noscript>This site runs best with JavaScript enabled.</noscript>
-    <div class="text-base sm:relative py-8 lg:py-14 px-6 md:px-16">
+    <div
+      class="container mx-auto w-5/6 sm:w-auto sm:ml-12 text-base sm:relative py-8 lg:py-14"
+    >
       <header
-        class="text-gray-500 sm:flex sm:justify-between sm:items-center sm:px-4 sm:py-3"
+        class="text-gray-500 sm:flex sm:justify-between sm:items-center sm:py-3"
       >
         <div
-          class="flex items-center justify-between content-center px-4 py-3 sm:p-0"
+          class="flex items-center justify-between content-center px-1 py-3 sm:p-0"
         >
           <div class="flex items-center">
             <div class="mr-2 lg:mr-4">
               <img
-                class="h-8 sm:h-auto md:h-12 lg:h-16 rounded-full"
+                class="h-8 sm:h-10 md:h-12 lg:h-16 rounded-full border-2"
                 src="https://avatars0.githubusercontent.com/u/22106648?s=460&u=525a1290898f10aafe2f43a19d9be8cb3c7ac14d&v=4"
                 alt="logo"
               />
             </div>
             <div class="flex-shrink-0">
               <span
-                class="block sm:inline text-gray-900 no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight"
+                class="block whitespace-no-wrap sm:inline text-gray-900 no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight"
                 >Yampier Medina</span
               >
             </div>
@@ -67,7 +69,7 @@
             </button>
           </div>
         </div>
-        <!-- hidden md:flex mt-3 lg:mt-4 uppercase tracking-wide text-xs spaced-x-6 -->
+
         <nav
           class="px-2 pt-2 pb-3 nav is-closed sm:flex sm:items-center sm:content-center"
         >
@@ -94,64 +96,60 @@
         </nav>
       </header>
 
-      <section id="welcome" class="">
-        <div class="flex">
-          <div class="flex flex-col mt-5 sm:mt-7 mx-3 sm:ml-20 sm:mr-2">
-            <h1 class="mb-2 sm:text-xl">
-              Hi, I'm a
-              <span class="font-semibold"
-                >Computer Science Engineer (2009)</span
-              >
-              turned to the <span class="font-semibold">JS universe</span>.
-            </h1>
-            <p class="mb-2 sm:text-lg">
-              I like AWS serverless computing, React, GraphQL and ES Next.
-            </p>
-            <p class="mb-2 sm:text-lg">
-              I Know SWE, testing, SQA and PM (Lead teams of 20-50 people).
-            </p>
+      <section id="welcome" class="sm:h-screen">
+        <div class="flex flex-col mt-5 sm:mt-7 mx-3 sm:ml-20 sm:mr-2">
+          <h1 class="mb-2 sm:text-xl">
+            Hi, I'm a
+            <span class="font-semibold">Computer Science Engineer (2009)</span>
+            turned to the <span class="font-semibold">JS universe</span>.
+          </h1>
+          <p class="mb-2 sm:text-lg">
+            I like AWS serverless computing, React, GraphQL and ES Next.
+          </p>
+          <p class="mb-2 sm:text-lg">
+            I Know SWE, testing, SQA and PM (Lead teams of 20-50 people).
+          </p>
 
-            <p class="mb-2 sm:text-lg">
-              I care about UX/UI, SEO and performance but I have a lot grasp.
-              Currently learning from Refactoring UI book and Tailwind CSS. I
-              have also played with Bootstrap and Semantic UI.
-            </p>
+          <p class="mb-2 sm:text-lg">
+            I care about UX/UI, SEO and performance but I have a lot grasp.
+            Currently learning from Refactoring UI book and Tailwind CSS.
+          </p>
+          <p class="mb-2 sm:text-lg">
+            I have also played with Bootstrap and Semantic UI.
+          </p>
 
-            <p class="mb-2 sm:text-lg">
-              I use VS Code, Git/Github, Chrome Developer Tools and Amplify CLI
-              daily.
-            </p>
+          <p class="mb-2 sm:text-lg">
+            I use VS Code, Git/Github, Chrome Developer Tools and Amplify CLI
+            daily.
+          </p>
 
-            <p class="mb-2 sm:text-lg">
-              I speak English (continuosly improving) and Spanish (native).
-            </p>
+          <p class="mb-2 sm:text-lg">
+            I speak English (continuosly improving) and Spanish (native).
+          </p>
 
-            <p class="mb-2 sm:text-lg">
-              I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS) pluged
-              to an external Dell UltraSharp 27 4K Monitor.
-            </p>
+          <p class="mb-2 sm:text-lg">
+            I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS) pluged
+            to an external Dell UltraSharp 27 4K Monitor.
+          </p>
 
-            <p class="mb-2 sm:text-lg">
-              I have 9 lovely Bettas and a pasion for nature.
-            </p>
+          <p class="mb-2 sm:text-lg">
+            I have 9 lovely Bettas and a pasion for nature.
+          </p>
 
-            <p class="mb-8 sm:text-lg">
-              Reads:
-              <span class="font-medium">The choice by Edith Eva Eger</span>
-              [non-technical, completed],
-              <span class="font-medium"
-                >Composing Software by Eric Elliot.</span
-              >
-              [technical, completed],
-              <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
-              [non-technical, in progress] and
-              <span class="font-medium"
-                >The Stratup Owbers's Manual by Steve Blank & Bob Dorf</span
-              >
-              [technical, pending].
-            </p>
-          </div>
-        
+          <p class="mb-8 sm:text-lg">
+            Reads:
+            <span class="font-medium">The choice by Edith Eva Eger</span>
+            [non-technical, completed],
+            <span class="font-medium">Composing Software by Eric Elliot.</span>
+            [technical, completed],
+            <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
+            [non-technical, in progress] and
+            <span class="font-medium"
+              >The Stratup Owbers's Manual by Steve Blank & Bob Dorf</span
+            >
+            [technical, pending].
+          </p>
+        </div>
       </section>
 
       <section id="projects mt-8">
@@ -203,7 +201,7 @@
           class="social items-center justify-center content-center flex flex-col h-20 text-xl"
         >
           <div
-            class="social-list sm:fixed sm:top-0 sm:left-0 sm:mt-24 sm:ml-20 lg:ml-24 sm:pt-10 flex sm:flex-col text-xl"
+            class="social-list text-xl sm:fixed sm:top-0 sm:left-0 sm:mt-20 lg:mt-24 sm:ml-12 lg:ml-16 sm:pt-10 flex sm:flex-col"
           >
             <a
               class="block mt-1 px-1 rounded-full hover:bg-gray-200"
