Ajust margin on sm to avoid image breaking

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     > -->
     <header class="bg-blue-800 text-gray-500">
       <div
-        class="container w-5/6 sm:w-auto text-base sm:relative py-8 lg:py-14 sm:flex sm:justify-between sm:items-center"
+        class="container text-base sm:relative py-5 lg:py-14 flex justify-between items-center"
       >
         <div class="flex items-center">
           <div class="mr-2 lg:mr-4">
